--- a/css/styles.css
+++ b/css/styles.css
@@ -7661,8 +7661,12 @@ textarea.form-control-lg {
 
 .mb-2 {
   margin-bottom: 0.5rem !important;
+  color: #CC5500 !important;
 }
-
+.mb-2-1 {
+  margin-bottom: 0.5rem !important;
+  
+}
 .mb-3 {
   margin-bottom: 1rem !important;
 }
